fixed button letter-spacing

--- a/src/common/templates/global.css
+++ b/src/common/templates/global.css
@@ -498,5 +498,6 @@ table {
 }
 
 button {
-	font-family: inherit;
+  font-family: inherit;
+  letter-spacing: inherit;
 }
